New utils.py from Don

--- a/pmsm_control_2.ipynb
+++ b/pmsm_control_2.ipynb
@@ -610,7 +610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = True"
+    "train = False"
    ]
   },
   {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,16 +631,16 @@
     "    agent_name: str           =                      'DDPG'  # Agent name\n",
     "    verbose: bool             =                        True  # Verbose printing\n",
     "\n",
-    "    # Group1: Changed from 250 to 2000 episodes\n",
-    "    total_steps: int          = 2000*sys_params[\"sim_steps\"] # Total training steps\n",
+    "    # Group1: Changed from 250 to 100 episodes\n",
+    "    total_steps: int          = 100*sys_params[\"sim_steps\"] # Total training steps\n",
     "\n",
     "    target_reward: int | None =                        -0.1  # Target reward used for early stopping\n",
     "    learning_starts: int      =                        5000  # Begin learning after this many steps\n",
     "    gamma: float              =                        0.99  # Discount factor\n",
     "    lr: float                 =                        3e-4  # Learning rate\n",
     "\n",
-    "    # Group1: Changed from 250 to 2000 episodes\n",
-    "    buffer_capacity: int      = 2000*sys_params[\"sim_steps\"] # Maximum replay buffer capacity\n",
+    "    # Group1: Changed from 250 to 100 episodes\n",
+    "    buffer_capacity: int      = 100*sys_params[\"sim_steps\"] # Maximum replay buffer capacity\n",
     "    \n",
     "    batch_size: int           =                          64  # Batch size used by learner\n",
     "    num_steps: int            =                           3  # Number of steps to unroll Bellman equation by\n",
