Changed back to old ultils.py and started making some changes (current -> torque tracking)

--- a/pmsm_control_2.ipynb
+++ b/pmsm_control_2.ipynb
@@ -606,11 +606,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = False"
+    "train = True"
    ]
   },
   {
